--- a/nc-zone-element-select-doc-dialog.html
+++ b/nc-zone-element-select-doc-dialog.html
@@ -6,7 +6,9 @@
 <link rel="import" href="../neon-animation/animations/scale-up-animation.html">
 <link rel="import" href="../app-localize-behavior/app-localize-behavior.html">
 
-<dom-module id="nc-zone-element-select-doc">
+<link rel="import" href="nc-zone-behavior.html">
+
+<dom-module id="nc-zone-element-select-doc-dialog">
   <template>
     <style>
       .header {
@@ -33,28 +35,56 @@
       .action-actions paper-button{
         width: 120px;
       }
+
+
+      .doc:first-child{
+        /* border-top: none; */
+      }
+
+      .doc {
+        cursor: pointer;
+        @apply --layout-horizontal;
+        @apply --layout-justified;
+        padding: 5px;
+        margin-bottom: 5px;
+        border: 1px solid var(--app-secondary-color);
+        border-radius: 3px;
+        /* border-top: 1px solid #E0E0E0; */
+        background-color: #E3F2FD;
+      }
+
+      paper-button{
+        margin: 10px 5px;
+        background-color: var(--app-secondary-color);
+        color: white;
+      }
+
+      .bolder {
+        font-weight: bolder;
+      }
+
     </style>
 
     <paper-dialog id="selectDocDialog" _modal entry-animation="scale-up-animation">
       <div class="header">
         <iron-icon icon="content-copy"></iron-icon><h3>{{localize('ELEMENT_SELECT_DOC_DIALOG_TITLE')}}</h3>
       </div>
-      <div class="content">
+      <!-- <div class="content">
         <p>{{localize('ELEMENT_SELECT_DOC_DIALOG_SUBTITLE')}} <b>[[elementConf.id]]</b></p>
-        
-      </div>
+      </div> -->
       <paper-dialog-scrollable>
         <div class="actions-list">
           <template is="dom-repeat" items="{{elementData.docs}}" as="doc">
-            <div on-tap="handleDocSelected" style="border: 1px solid">
-              <div>{{doc.id}}</div>
-              <div>{{doc.totalAmount}}</div>
-              <div>{{doc.edited}}</div>
+            <div class="doc" on-tap="_docSelected">
+              <div class="bolder">#[[doc.id]]</div>
+              <div>{{_formatTime(doc.edited)}}</div>
+              <div>[[_formatPrice(doc.totalAmount)]]</div>
             </div>
           </template>
         </div>
       </paper-dialog-scrollable>
       <div class="buttons">
+        <paper-button raised on-tap="_newDoc"><iron-icon icon="add"></iron-icon>{{localize('BUTTON_NEW')}}</paper-button>
         <paper-button raised dialog-dismiss>{{localize('BUTTON_CLOSE')}}</paper-button>
       </div>
     </paper-dialog>
@@ -62,9 +92,9 @@
   </template>
 
   <script>
-    class NcZoneElementSelectDoc extends Polymer.mixinBehaviors([Polymer.AppLocalizeBehavior], Polymer.Element) {
+    class NcZoneElementSelectDocDialog extends Polymer.mixinBehaviors([Polymer.AppLocalizeBehavior], ncZoneBehavior(Polymer.Element)) {
       static get is() {
-        return 'nc-zone-element-select-doc'; 
+        return 'nc-zone-element-select-doc-dialog'; 
       }
 
       static get properties() {
@@ -90,13 +120,17 @@
         // console.log(this.elementData)
       }
 
-      handleDocSelected(e){
+      _newDoc(e){
+        this.dispatchEvent(new CustomEvent('element-selected', {detail: {elementConf: this.elementConf}, bubbles: true, composed: true }));
+      }
+
+      _docSelected(e){
         this.dispatchEvent(new CustomEvent('element-selected', {detail: {elementConf: this.elementConf, ticketId: e.model.doc.id}, bubbles: true, composed: true }));
         this.$.selectDocDialog.close();
       }
 
     }
 
-    window.customElements.define(NcZoneElementSelectDoc.is, NcZoneElementSelectDoc);
+    window.customElements.define(NcZoneElementSelectDocDialog.is, NcZoneElementSelectDocDialog);
   </script>
 </dom-module>
