--- a/nc-zone-element-select-doc-dialog.html
+++ b/nc-zone-element-select-doc-dialog.html
@@ -5,12 +5,14 @@
 <link rel="import" href="../neon-animation/web-animations.html">
 <link rel="import" href="../neon-animation/animations/scale-up-animation.html">
 <link rel="import" href="../app-localize-behavior/app-localize-behavior.html">
+<link rel="import" href="../paper-icon-button/paper-icon-button.html">
 
 <link rel="import" href="nc-zone-behavior.html">
 
 <dom-module id="nc-zone-element-select-doc-dialog">
   <template>
     <style>
+      .doc{}
     </style>
 
     <paper-dialog id="selectDocDialog" class="modalNoApp" modal entry-animation="scale-up-animation">
@@ -23,14 +25,21 @@
       <paper-dialog-scrollable>
         <div class="actions-list">
           <template is="dom-repeat" items="{{elementData.docs}}" as="doc">
-            <div class="doc" on-tap="_docSelected">
-              <div class="bolder">#[[doc.id]]</div>
-              <div>{{_formatTime(doc.edited)}}</div>
-              <div>[[_formatPrice(doc.totalAmount)]]</div>
+            
+            <div class="line">
+              <div class="line-container" on-tap="_docSelected">
+                <div class="line-doc-id">#[[doc.id]]</div>
+                <div class="line-doc-edited">{{_formatTime(doc.edited)}}</div>
+                <div class="line-doc-amount">[[_formatPrice(doc.totalAmount)]]</div>
+              </div>
+              <div class="line-actions">
+                <paper-icon-button icon="compare-arrows" drawer-toggle on-tap="_moveDoc"></paper-icon-button>
+              </div>
             </div>
           </template>
         </div>
       </paper-dialog-scrollable>
+
       <div class="buttons">
         <paper-button raised on-tap="_newDoc"><iron-icon icon="add"></iron-icon>{{localize('BUTTON_NEW')}}</paper-button>
         <paper-button raised dialog-dismiss>{{localize('BUTTON_CLOSE')}}</paper-button>
@@ -76,6 +85,13 @@
 
       _docSelected(e){
         this.dispatchEvent(new CustomEvent('element-selected', {detail: {elementConf: this.elementConf, ticketId: e.model.doc.id}, bubbles: true, composed: true }));
+        this.elementConf = {};
+        this.elementData = {};
+        this.$.selectDocDialog.close();
+      }
+
+      _moveDoc(e){
+        this.dispatchEvent(new CustomEvent('element-selected-to-move', {detail: {elementConf: this.elementConf, ticketId: e.model.doc.id}, bubbles: true, composed: true }));
         this.elementConf = {};
         this.elementData = {};
         this.$.selectDocDialog.close();
